--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "sheetsy",
   "version": "1.0.0",
   "description": "Use your Google Sheets as a data source in the browser.  Like tabletop.js but simpler.",
-  "main": "index.js",
+  "main": "index-node.js",
+  "browser": "browser-build.js",
   "scripts": {
     "test": "tape test/test-with-fixtures.js",
     "test:node": "node test/test-without-fixtures.js",
-    "test:browser": "browserify test/test-without-fixtures.js | tape-run",
-    "test:all": "npm run test && npm run test:node && npm run test:browser"
+    "test:browser": "npm run build && browserify test/test-without-fixtures.js | tape-run",
+    "test:all": "npm run test && npm run test:node && npm run test:browser",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -28,16 +30,18 @@
   },
   "homepage": "https://github.com/TehShrike/sheetsy#readme",
   "devDependencies": {
+    "babel-plugin-external-helpers": "6.22.0",
+    "babel-preset-es2015": "6.24.1",
     "browser-run": "3.5.0",
     "browserify": "14.4.0",
+    "rollup-plugin-babel": "2.7.1",
+    "rollup-plugin-commonjs": "8.0.2",
+    "rollup-plugin-node-resolve": "3.0.0",
     "tape": "4.7.0",
     "tape-run": "2.4.1"
   },
   "dependencies": {
     "got": "7.1.0",
     "ordered-entries": "1.0.0"
-  },
-  "browser": {
-    "./get.js": "./browser-get.js"
   }
 }
