--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sheetsy",
   "version": "1.0.3",
-  "description": "Use your Google Sheets as a data source in the browser.  Like tabletop.js but simpler.",
+  "description": "Use your Google Sheets as a data source in the browser, avoid writing a CMS back-end",
   "main": "index-node.js",
   "browser": "browser-build.js",
   "scripts": {
