--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:node": "node test/test-without-fixtures.js",
     "test:browser": "npm run build && browserify test/test-without-fixtures.js | tape-run",
     "test:all": "npm run test && npm run test:node && npm run test:browser",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "size": "uglifyjs browser-build.js -mc | gzip-size --raw",
   },
   "engines": {
     "node": ">=6.0.0"
