--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:browser": "npm run build && browserify test/test-without-fixtures.js | tape-run",
     "test:all": "npm run test && npm run test:node && npm run test:browser",
     "build": "rollup -c",
-    "size": "uglifyjs browser-build.js -mc | gzip-size --raw",
+    "size": "uglifyjs browser-build.js -mc | gzip-size --raw"
   },
   "engines": {
     "node": ">=6.0.0"
