--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
   "homepage": "https://github.com/TehShrike/sheetsy#readme",
   "devDependencies": {
     "babel-plugin-external-helpers": "6.22.0",
-    "babel-preset-es2015": "6.24.1",
+    "babel-preset-env": "1.6.1",
     "browser-run": "3.5.0",
     "browserify": "14.4.0",
+    "rollup": "0.54.1",
     "rollup-plugin-babel": "2.7.1",
     "rollup-plugin-commonjs": "8.0.2",
     "rollup-plugin-node-resolve": "3.0.0",
