--- a/package.json
+++ b/package.json
@@ -36,15 +36,14 @@
   "devDependencies": {
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-env": "1.6.1",
-    "basic-xhr": "^1.0.0",
-    "browser-run": "^4.1.3",
-    "browserify": "^16.1.0",
+    "basic-xhr": "~1.0.0",
+    "browserify": "16.1.0",
     "rollup": "0.54.1",
     "rollup-plugin-babel": "2.7.1",
-    "rollup-plugin-commonjs": "^8.3.0",
+    "rollup-plugin-commonjs": "8.3.0",
     "rollup-plugin-node-resolve": "3.0.0",
     "tape": "4.7.0",
-    "tape-run": "2.4.1"
+    "tape-run": "3.0.4"
   },
   "dependencies": {
     "got": "7.1.0",
