--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sheetsy",
   "version": "2.1.3",
-  "description": "Use your Google Sheets as a data source in the browser, avoid writing a CMS back-end",
+  "description": "Use Google Sheets as a data source in the browser without OAuth",
   "main": "index-node.js",
   "browser": "browser-build.js",
   "scripts": {
