--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-env": "^1.7.0",
     "basic-xhr": "~1.0.0",
-    "browserify": "16.2.3",
+    "browserify": "^16.5.0",
     "rollup": "0.54.1",
     "rollup-plugin-babel": "2.7.1",
     "rollup-plugin-commonjs": "8.3.0",
     "rollup-plugin-node-resolve": "3.0.0",
     "tape": "4.7.0",
-    "tape-run": "4.0.0"
+    "tape-run": "^6.0.1"
   },
   "dependencies": {
     "got": "7.1.0",
